gcc/testsuite/rust/rustc/ui/resolve/crate-called-as-function.rs
fn main() {
    ::foo() // { dg-error ".E0425." "" { target *-*-* } }
}

